--- a/calculator/index.html
+++ b/calculator/index.html
@@ -18,6 +18,7 @@
                 <input type="button" value="A/C" id="clear" onclick="clr()">
                 <input type="button" value="+" id="addButton" onclick="display('+')">
                 <input type="button" value="-" id="minusButton" onclick="display('-')">
+                <input type="button" value="=" id="calculateButton" onclick="calc()">
 
             </td>
         </tr>
@@ -49,7 +50,8 @@
                 <input type="button" value="7" id="b7" onclick="display('7')">
                 <input type="button" value="8" id="b8" onclick="display('8')">
                 <input type="button" value="9" id="b9" onclick="display('9')">
-                <input type="button" value="=" id="calculateButton" onclick="calc()">
+                <input type="button" value="0" id="b0" onclick="display('0')">
+
             </td>
         </tr>
 
